--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <!-- Left block -->
         <aside class="left-block">
-            <img class="photo" src="img/photo.jpg" alt="Failed to load picture">
+            <img class="photo" src="img/photo.jpg" alt="[Failed to load picture]">
             <div class="left-text-block">
                 <!-- Contacts  -->
                 <div>
@@ -54,20 +54,20 @@
                 </div>
             </div>
         </aside>
-        <!-- Richt block -->
+        <!-- Right block -->
         <div class="right-block">
             <!-- About -->
             <div class="about">
-                <p class="black"><b>
-                        Front-end developer
-                    </b></p>
+                <p class="black-bold">
+                    Front-end developer
+                </p>
                 <h1>
                     Mykhailo Diuzhenko
                 </h1>
-                <p>
-                    Passionate about programming. Keen on developing UX in a manner that has the user in mind. Focused
-                    and
-                    attentive to details. Always meeting deadlines. Open to challenging tasks.
+                <p class="description">
+                    A developer who started as a tester and always puts himself in the user's shoes. I deliver clean
+                    code that is easy to read and maintain. I always read the TOR and meet reasonable deadlines.
+                    Attentive to details. Open to challenging tasks. Talk to me if you want to learn more.
                 </p>
             </div>
             <!-- Projects -->
@@ -76,30 +76,30 @@
                 <ol>
                     <li>
                         <a href="https://hellenglish.goit.global/">
-                            hellenglish.goit.global
+                            https://hellenglish.goit.global/
                         </a>
                         .......................
-                        <span class="black">[</span>
+                        <span class="black-bold">[</span>
                         HTML, CSS
-                        <span class="black">]</span>
+                        <span class="black-bold">]</span>
                     </li>
                     <li>
                         <a href="https://cryptohub.goit.global/">
-                            cryptohub.goit.global
+                            https://cryptohub.goit.global/
                         </a>
                         ........................
-                        <span class="black">[</span>
+                        <span class="black-bold">[</span>
                         JavaScript
-                        <span class="black">]</span>
+                        <span class="black-bold">]</span>
                     </li>
                     <li>
                         <a href="https://kidslike.goit.global/">
-                            kidslike.goit.global
+                            https://kidslike.goit.global/
                         </a>
                         ...............................
-                        <span class="black">[</span>
+                        <span class="black-bold">[</span>
                         React.js, Node.js
-                        <span class="black">]</span>
+                        <span class="black-bold">]</span>
                     </li>
                 </ol>
             </div>
@@ -112,15 +112,17 @@
                         Front-End Developer
                         <span class="orange">Freelance</span>
                     </h4>
-                    <h6>
+                    <p class="duration">
                         August 2022 through now
                         <span class="black">|</span>
                         Ukraine
-                    </h6>
+                    </p>
                     <ul>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, ipsum?</li>
-                        <li>Natus dolores delectus numquam consectetur maxime</li>
-                        <li>Aliquam reiciendis recusandae nisi eius quia asperiores</li>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</li>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Risus commodo viverra maecenas.</li>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
                     </ul>
                 </div>
                 <!-- Experience Block 2 -->
@@ -129,11 +131,11 @@
                         Team Member (unpaid commitment)
                         <span class="orange">multitran.com</span>
                     </h4>
-                    <h6>
+                    <p class="duration">
                         2016 through now
                         <span class="black">|</span>
                         Online
-                    </h6>
+                    </p>
                     <ul>
                         <li>Dictionary contributor and editor, morphology editor</li>
                         <li>Content writer, decorator (HTML/CSS), UI/UX tester</li>
@@ -146,11 +148,11 @@
                         Translator of English, Ukrainian & Russian
                         <span class="orange">3 employers</span>
                     </h4>
-                    <h6>
+                    <p class="duration">
                         May 2010 - February 2022
                         <span class="black">|</span>
                         Ukraine
-                    </h6>
+                    </p>
                     <ul>
                         <li>Flight MH17 Joint Investigation Team (Translator, Interpreter)</li>
                         <li>Ilyashev & Partners Law Firm (Legal Translator)</li>
@@ -166,14 +168,14 @@
                     <h4>
                         <span class="orange">Kyiv International University</span> (KyMU)
                     </h4>
-                    <p class="black"><b>
-                            Translation (English, German)
-                        </b></p>
-                    <h6>
+                    <p class="black-bold">
+                        Translation (English, German)
+                    </p>
+                    <p class="duration">
                         Septermber 2005 - June 2010
                         <span class="black">|</span>
                         Ukraine
-                    </h6>
+                    </p>
                 </div>
             </div>
         </div>
