Corrected spacing between bullet and list item text in Projects's ol

--- a/index.html
+++ b/index.html
@@ -75,32 +75,34 @@
                 <h3>Projects</h3>
                 <ol>
                     <li>
-                        <a href="https://hellenglish.goit.global/">
-                            https://hellenglish.goit.global/
-                        </a>
-                        .......................
-                        <span class="black-bold">[</span>
-                        HTML, CSS
-                        <span class="black-bold">]</span>
+                        <span class="bullet-spacing">
+                            <a href="https://hellenglish.goit.global/">
+                                https://hellenglish.goit.global/
+                            </a>
+                            .......................
+                            <span class="black-bold">[</span>
+                            HTML, CSS
+                            <span class="black-bold">]</span>
+                        </span>
                     </li>
-                    <li>
-                        <a href="https://cryptohub.goit.global/">
-                            https://cryptohub.goit.global/
-                        </a>
-                        ........................
-                        <span class="black-bold">[</span>
-                        JavaScript
-                        <span class="black-bold">]</span>
-                    </li>
-                    <li>
-                        <a href="https://kidslike.goit.global/">
-                            https://kidslike.goit.global/
-                        </a>
-                        ...............................
-                        <span class="black-bold">[</span>
-                        React.js, Node.js
-                        <span class="black-bold">]</span>
-                    </li>
+                    <li><span class="bullet-spacing">
+                            <a href="https://cryptohub.goit.global/">
+                                https://cryptohub.goit.global/
+                            </a>
+                            ........................
+                            <span class="black-bold">[</span>
+                            JavaScript
+                            <span class="black-bold">]</span>
+                        </span></li>
+                    <li><span class="bullet-spacing">
+                            <a href="https://kidslike.goit.global/">
+                                https://kidslike.goit.global/
+                            </a>
+                            ...............................
+                            <span class="black-bold">[</span>
+                            React.js, Node.js
+                            <span class="black-bold">]</span>
+                        </span></li>
                 </ol>
             </div>
             <!-- Work Experience -->
