Adds dashed leaders in Projects' ol

--- a/index.html
+++ b/index.html
@@ -79,30 +79,34 @@
                             <a href="https://hellenglish.goit.global/">
                                 https://hellenglish.goit.global/
                             </a>
-                            .......................
+                            <span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
                             <span class="black-bold">[</span>
                             HTML, CSS
                             <span class="black-bold">]</span>
                         </span>
                     </li>
-                    <li><span class="bullet-spacing">
+                    <li>
+                        <span class="bullet-spacing">
                             <a href="https://cryptohub.goit.global/">
                                 https://cryptohub.goit.global/
                             </a>
-                            ........................
+                            <span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;</span>
                             <span class="black-bold">[</span>
                             JavaScript
                             <span class="black-bold">]</span>
-                        </span></li>
-                    <li><span class="bullet-spacing">
+                        </span>
+                    </li>
+                    <li>
+                        <span class="bullet-spacing">
                             <a href="https://kidslike.goit.global/">
                                 https://kidslike.goit.global/
                             </a>
-                            ...............................
+                            <span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</span>
                             <span class="black-bold">[</span>
                             React.js, Node.js
                             <span class="black-bold">]</span>
-                        </span></li>
+                        </span>
+                    </li>
                 </ol>
             </div>
             <!-- Work Experience -->
