Finalized project list with leaders

--- a/index.html
+++ b/index.html
@@ -73,39 +73,54 @@
 			<!-- Projects -->
 			<div class="projects">
 				<h3>Projects</h3>
-				<ol>
+				<ol id="projects-list">
 					<li>
-						<span class="bullet-spacing">
-							<a href="https://hellenglish.goit.global/">
-								https://hellenglish.goit.global/
-							</a>
-							<span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
+						<div>
+							<div class="leaders-box">
+								<div class="project-link">
+									<a href="
+									https://hellenglish.goit.global/
+									" target="_blank">
+									https://hellenglish.goit.global/
+									</a>
+								</div>
+							</div>
 							<span class="black-bold">[</span>
-							HTML, CSS
+							HTML5, CSS3
 							<span class="black-bold">]</span>
-						</span>
+						</div>
 					</li>
 					<li>
-						<span class="bullet-spacing">
-							<a href="https://cryptohub.goit.global/">
-								https://cryptohub.goit.global/
-							</a>
-							<span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;</span>
+						<div>
+							<div class="leaders-box">
+								<div class="project-link">
+									<a href="
+									https://cryptohub.goit.global/
+									" target="_blank">
+									https://cryptohub.goit.global/
+									</a>
+								</div>
+							</div>
 							<span class="black-bold">[</span>
 							JavaScript
 							<span class="black-bold">]</span>
-						</span>
+						</div>
 					</li>
 					<li>
-						<span class="bullet-spacing">
-							<a href="https://kidslike.goit.global/">
-								https://kidslike.goit.global/
-							</a>
-							<span class="underlined">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</span>
+						<div>
+							<div class="leaders-box">
+								<div class="project-link">
+									<a href="
+									https://kidslike.goit.global/
+									" target="_blank">
+									https://kidslike.goit.global/
+									</a>
+								</div>
+							</div>
 							<span class="black-bold">[</span>
 							React.js, Node.js
 							<span class="black-bold">]</span>
-						</span>
+						</div>
 					</li>
 				</ol>
 			</div>
