--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<!-- Ed. Block 1 -->
 				<div>
 					<h4>
-						<span class="orange">Kyiv International University</span> (KyMU)
+						<span class="orange">Kyiv International University</span>
 					</h4>
 					<p class="black-bold">
 						Translation (English, German)
