--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 						<br>
 						<p>✉</p>
 						<a href="mailto:frontend.developer@i.ua">frontend.developer@i.ua</a>
+						<br>
+						<p>
+							<img id="github-logo"		src="img\PNG\GitHub-Mark-Light-32px.png" alt="github">
+						</img>
+						</p>
+						<a href="https://github.com/dev0652">github.com/dev0652</a>
 					</div>
 				</div>
 				<!-- Tech Skills  -->
@@ -65,9 +71,7 @@
 					Mykhailo Diuzhenko
 				</h1>
 				<p class="description">
-					A developer who started as a tester and always puts himself in the user's shoes. I deliver clean
-					code that is easy to read and maintain. I always read the TOR and meet reasonable deadlines.
-					Attentive to details. Open to challenging tasks. Talk to me if you want to learn more.
+					As someone who had been reporting bugs and UX issues long before actually learning to code, I always put myself in the user's shoes. <br>I deliver clean code that is easy to read and maintain and meet reasonable deadlines. I'm always open to learning something new. Feel free to get in touch if you would like to learn more about me.
 				</p>
 			</div>
 			<!-- Projects -->
