--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<a href="mailto:frontend.developer@i.ua">frontend.developer@i.ua</a>
 						<br>
 						<p>
-							<img id="github-logo"		src="img\PNG\GitHub-Mark-Light-32px.png" alt="github">
+							<img id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github">
 						</img>
 						</p>
 						<a href="https://github.com/dev0652">github.com/dev0652</a>
