--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					Mykhailo Diuzhenko
 				</h1>
 				<p class="description">
-					As someone who had been reporting bugs and UX issues long before actually learning to code, I always put myself in the user's shoes. <br>I deliver clean code that is easy to read and maintain and meet reasonable deadlines. I'm always open to learning something new. Feel free to get in touch if you would like to learn more about me.
+					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to learning something new. Feel free to get in touch!
 				</p>
 			</div>
 			<!-- Projects -->
