--- a/index.html
+++ b/index.html
@@ -13,30 +13,39 @@
 
 <body>
 	<!-- Page content -->
-	<div class="main">
+	<main>
 		<!-- Left block -->
 		<aside class="left-block">
-			<img class="photo" src="img/photo.jpg" alt="[Failed to load picture]">
-			<div class="left-text-block">
+			<img 
+			class="photo" 
+			src="img/photo.jpg" 
+			alt="[Failed to load picture]"
+			>
+			<div class="sidebar-text">
 				<!-- Contacts  -->
-				<div>
-					<h3>Contacts</h3>
-					<div class="contacts">
-						<p>☎</p>
-						<a href="tel:+380689369790">+38 068 936 9790</a>
-						<br>
-						<p>✉</p>
-						<a href="mailto:frontend.developer@i.ua">frontend.developer@i.ua</a>
-						<br>
-						<p>
-							<img id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github">
-						</img>
-						</p>
-						<a href="https://github.com/dev0652">github.com/dev0652</a>
-					</div>
-				</div>
+				<section class="contacts">
+					<h3>Contacts</h3>		
+					<p>☎</p>
+					<a href="tel:+380689369790">
+						+38 068 936 9790
+					</a>
+					<br>
+					<p>✉</p>
+					<a href="mailto:frontend.developer@i.ua">
+						frontend.developer@i.ua
+					</a>
+					<br>
+					<p>
+						<img 
+						id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github"
+						>	
+					</p>
+					<a href="https://github.com/dev0652">
+						github.com/dev0652
+					</a>
+				</section>
 				<!-- Tech Skills  -->
-				<div>
+				<section>
 					<h3>Tech Skills</h3>
 					<ul>
 						<li>HTML5</li>
@@ -47,9 +56,9 @@
 						<li>React.js</li>
 						<li>Node.js</li>
 					</ul>
-				</div>
+				</section>
 				<!-- Soft Skills  -->
-				<div>
+				<section>
 					<h3>Soft Skills</h3>
 					<ul>
 						<li>Scrum</li>
@@ -57,13 +66,13 @@
 						<li>GTD</li>
 						<li>Teamwork</li>
 					</ul>
-				</div>
+				</section>
 			</div>
 		</aside>
 		<!-- Right block -->
 		<div class="right-block">
 			<!-- About -->
-			<div class="about">
+			<section class="about">
 				<p class="black-bold">
 					Front-end developer
 				</p>
@@ -73,14 +82,14 @@
 				<p class="description">
 					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to learning something new. Feel free to get in touch!
 				</p>
-			</div>
+			</section>
 			<!-- Projects -->
-			<div class="projects">
+			<section class="projects">
 				<h3>Projects</h3>
 				<ol id="projects-list">
 					<li>
-						<div>
-							<div class="leaders-box">
+						<span>
+							<span class="leaders-box">
 								<div class="project-link">
 									<a href="
 									https://hellenglish.goit.global/
@@ -88,51 +97,51 @@
 									https://hellenglish.goit.global/
 									</a>
 								</div>
-							</div>
+							</span>
 							<span class="black-bold">[</span>
 							HTML5, CSS3
 							<span class="black-bold">]</span>
-						</div>
+						</span>
 					</li>
 					<li>
-						<div>
-							<div class="leaders-box">
-								<div class="project-link">
+						<span>
+							<span class="leaders-box">
+								<span class="project-link">
 									<a href="
 									https://cryptohub.goit.global/
 									" target="_blank">
 									https://cryptohub.goit.global/
 									</a>
-								</div>
-							</div>
+								</span>
+							</span>
 							<span class="black-bold">[</span>
 							JavaScript
 							<span class="black-bold">]</span>
-						</div>
+						</span>
 					</li>
 					<li>
-						<div>
-							<div class="leaders-box">
-								<div class="project-link">
+						<span>
+							<span class="leaders-box">
+								<span class="project-link">
 									<a href="
 									https://kidslike.goit.global/
 									" target="_blank">
 									https://kidslike.goit.global/
 									</a>
-								</div>
-							</div>
+								</span>
+							</span>
 							<span class="black-bold">[</span>
 							React.js, Node.js
 							<span class="black-bold">]</span>
-						</div>
+						</span>
 					</li>
 				</ol>
-			</div>
+			</section>
 			<!-- Work Experience -->
-			<div class="experience">
+			<section class="experience">
 				<h3>Work Experience</h3>
 				<!-- Experience Block 1 -->
-				<div>
+				<section>
 					<h4>
 						Front-End Developer
 						<span class="orange">Freelance</span>
@@ -149,9 +158,9 @@
 						<li>Risus commodo viverra maecenas.</li>
 						<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
 					</ul>
-				</div>
+				</section>
 				<!-- Experience Block 2 -->
-				<div>
+				<section>
 					<h4>
 						Team Member (unpaid commitment)
 						<span class="orange">multitran.com</span>
@@ -166,9 +175,9 @@
 						<li>Content writer, decorator (HTML/CSS), UI/UX tester</li>
 						<li>Forum moderator, administrator</li>
 					</ul>
-				</div>
-				<div>
-					<!-- Experience Block 3 -->
+				</section>
+				<!-- Experience Block 3 -->
+				<section>
 					<h4>
 						Translator of English, Ukrainian & Russian
 						<span class="orange">3 employers</span>
@@ -183,10 +192,10 @@
 						<li>Ilyashev & Partners Law Firm (Legal Translator)</li>
 						<li>Exleng (Translator)</li>
 					</ul>
-				</div>
-			</div>
+				</section>
+			</section>
 			<!-- Education -->
-			<div class="education">
+			<section class="education">
 				<h3>Education</h3>
 				<!-- Ed. Block 1 -->
 				<div>
@@ -202,9 +211,9 @@
 						Ukraine
 					</p>
 				</div>
-			</div>
+			</section>
 		</div>
-	</div>
+	</main>
 
 </body>
 
