Reverse flex order

--- a/index.html
+++ b/index.html
@@ -13,64 +13,9 @@
 
 <body>
 	<!-- Page content -->
-	<main>
-		<!-- Left block -->
-		<aside class="left-block">
-			<img 
-			class="photo" 
-			src="img/photo.jpg" 
-			alt="[Failed to load picture]"
-			>
-			<div class="sidebar-text">
-				<!-- Contacts  -->
-				<section class="contacts">
-					<h3>Contacts</h3>		
-					<p>☎</p>
-					<a href="tel:+380689369790">
-						+38 068 936 9790
-					</a>
-					<br>
-					<p>✉</p>
-					<a href="mailto:frontend.developer@i.ua">
-						frontend.developer@i.ua
-					</a>
-					<br>
-					<p>
-						<img 
-						id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github"
-						>	
-					</p>
-					<a href="https://github.com/dev0652">
-						github.com/dev0652
-					</a>
-				</section>
-				<!-- Tech Skills  -->
-				<section>
-					<h3>Tech Skills</h3>
-					<ul>
-						<li>HTML5</li>
-						<li>CSS3</li>
-						<li>GIT</li>
-						<li>WebPack</li>
-						<li>JavaScript</li>
-						<li>React.js</li>
-						<li>Node.js</li>
-					</ul>
-				</section>
-				<!-- Soft Skills  -->
-				<section>
-					<h3>Soft Skills</h3>
-					<ul>
-						<li>Scrum</li>
-						<li>Agile</li>
-						<li>GTD</li>
-						<li>Teamwork</li>
-					</ul>
-				</section>
-			</div>
-		</aside>
+	<div class="page">
 		<!-- Right block -->
-		<div class="right-block">
+		<main class="right-block">
 			<!-- About -->
 			<section class="about">
 				<p class="black-bold">
@@ -212,8 +157,63 @@
 					</p>
 				</div>
 			</section>
-		</div>
-	</main>
+		</main>
+		<!-- Left block -->
+		<aside class="left-block">
+			<img 
+			class="photo" 
+			src="img/photo.jpg" 
+			alt="[Failed to load picture]"
+			>
+			<div class="sidebar-text">
+				<!-- Contacts  -->
+				<section class="contacts">
+					<h3>Contacts</h3>		
+					<p>☎</p>
+					<a href="tel:+380689369790">
+						+38 068 936 9790
+					</a>
+					<br>
+					<p>✉</p>
+					<a href="mailto:frontend.developer@i.ua">
+						frontend.developer@i.ua
+					</a>
+					<br>
+					<p>
+						<img 
+						id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github"
+						>	
+					</p>
+					<a href="https://github.com/dev0652">
+						github.com/dev0652
+					</a>
+				</section>
+				<!-- Tech Skills  -->
+				<section>
+					<h3>Tech Skills</h3>
+					<ul>
+						<li>HTML5</li>
+						<li>CSS3</li>
+						<li>GIT</li>
+						<li>WebPack</li>
+						<li>JavaScript</li>
+						<li>React.js</li>
+						<li>Node.js</li>
+					</ul>
+				</section>
+				<!-- Soft Skills  -->
+				<section>
+					<h3>Soft Skills</h3>
+					<ul>
+						<li>Scrum</li>
+						<li>Agile</li>
+						<li>GTD</li>
+						<li>Teamwork</li>
+					</ul>
+				</section>
+			</div>
+		</aside>
+	</div>
 
 </body>
 
