--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 					Mykhailo Diuzhenko
 				</h1>
 				<p class="description">
-					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to learning something new. Feel free to get in touch!
+					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been
+					reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the
+					user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to
+					learning something new. Feel free to get in touch!
 				</p>
 			</section>
 			<!-- Projects -->
@@ -36,13 +39,13 @@
 					<li>
 						<span>
 							<span class="leaders-box">
-								<div class="project-link">
+								<span class="project-link">
 									<a href="
 									https://hellenglish.goit.global/
 									" target="_blank">
-									https://hellenglish.goit.global/
+										https://hellenglish.goit.global/
 									</a>
-								</div>
+								</span>
 							</span>
 							<span class="black-bold">[</span>
 							HTML5, CSS3
@@ -56,7 +59,7 @@
 									<a href="
 									https://cryptohub.goit.global/
 									" target="_blank">
-									https://cryptohub.goit.global/
+										https://cryptohub.goit.global/
 									</a>
 								</span>
 							</span>
@@ -72,7 +75,7 @@
 									<a href="
 									https://kidslike.goit.global/
 									" target="_blank">
-									https://kidslike.goit.global/
+										https://kidslike.goit.global/
 									</a>
 								</span>
 							</span>
@@ -161,15 +164,11 @@
 		</main>
 		<!-- Left block -->
 		<aside class="left-block">
-			<img 
-			class="photo" 
-			src="img/photo.jpg" 
-			alt="[Failed to load picture]"
-			>
+			<img class="photo" src="img/photo.jpg" alt="[Failed to load picture]">
 			<div class="sidebar-text">
 				<!-- Contacts  -->
 				<section class="contacts">
-					<h3>Contacts</h3>		
+					<h3>Contacts</h3>
 					<p>☎</p>
 					<a href="tel:+380689369790">
 						+38 068 936 9790
@@ -181,9 +180,7 @@
 					</a>
 					<br>
 					<p>
-						<img 
-						id="github-logo"		src="img\GitHub-Mark-Light-32px.png" alt="github"
-						>	
+						<img id="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
 					</p>
 					<a href="https://github.com/dev0652">
 						github.com/dev0652
