Adds some css polishes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<main class="right-block">
 			<!-- About -->
 			<section class="about">
-				<p class="black-bold">
+				<p class="black bold">
 					Front-end developer
 				</p>
 				<h1>
@@ -47,9 +47,9 @@
 									</a>
 								</span>
 							</span>
-							<span class="black-bold">[</span>
+							<span class="black bold">[</span>
 							HTML5, CSS3
-							<span class="black-bold">]</span>
+							<span class="black bold">]</span>
 						</span>
 					</li>
 					<li>
@@ -63,9 +63,9 @@
 									</a>
 								</span>
 							</span>
-							<span class="black-bold">[</span>
+							<span class="black bold">[</span>
 							JavaScript
-							<span class="black-bold">]</span>
+							<span class="black bold">]</span>
 						</span>
 					</li>
 					<li>
@@ -79,9 +79,9 @@
 									</a>
 								</span>
 							</span>
-							<span class="black-bold">[</span>
+							<span class="black bold">[</span>
 							React.js, Node.js
-							<span class="black-bold">]</span>
+							<span class="black bold">]</span>
 						</span>
 					</li>
 				</ol>
@@ -151,7 +151,7 @@
 					<h4>
 						<span class="orange">Kyiv International University</span>
 					</h4>
-					<p class="black-bold">
+					<p class="black bold">
 						Translation (English, German)
 					</p>
 					<p class="duration">
