Minor css improvements

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <body>
 	<!-- Page content -->
-	<div class="page">
+	<div id="page">
 		<!-- Right block -->
-		<main class="right-block">
+		<main id="right-block">
 			<!-- About -->
-			<section class="about">
-				<p class="black bold">
+			<section id="about">
+				<p id="target">
 					Front-end developer
 				</p>
 				<h1>
 					Mykhailo Diuzhenko
 				</h1>
-				<p class="description">
+				<p id="description">
 					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been
 					reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the
 					user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to
@@ -33,7 +33,7 @@
 				</p>
 			</section>
 			<!-- Projects -->
-			<section class="projects">
+			<section id="projects">
 				<h3>Projects</h3>
 				<ol id="projects-list">
 					<li>
@@ -87,13 +87,13 @@
 				</ol>
 			</section>
 			<!-- Work Experience -->
-			<section class="experience">
+			<section id="experience">
 				<h3>Work Experience</h3>
 				<!-- Experience Block 1 -->
 				<section>
 					<h4>
 						Front-End Developer
-						<span class="orange">Freelance</span>
+						<span>Freelance</span>
 					</h4>
 					<p class="duration">
 						August 2022 through now
@@ -112,7 +112,7 @@
 				<section>
 					<h4>
 						Team Member (unpaid commitment)
-						<span class="orange">multitran.com</span>
+						<span>multitran.com</span>
 					</h4>
 					<p class="duration">
 						2016 through now
@@ -129,7 +129,7 @@
 				<section>
 					<h4>
 						Translator of English, Ukrainian & Russian
-						<span class="orange">3 employers</span>
+						<span>3 employers</span>
 					</h4>
 					<p class="duration">
 						May 2010 - February 2022
@@ -144,12 +144,12 @@
 				</section>
 			</section>
 			<!-- Education -->
-			<section class="education">
+			<section id="education">
 				<h3>Education</h3>
 				<!-- Ed. Block 1 -->
 				<div>
 					<h4>
-						<span class="orange">Kyiv International University</span>
+						<span>Kyiv International University</span>
 					</h4>
 					<p class="black bold">
 						Translation (English, German)
@@ -163,11 +163,14 @@
 			</section>
 		</main>
 		<!-- Left block -->
-		<aside class="left-block">
-			<img class="photo" src="img/photo.jpg" alt="[Failed to load picture]">
-			<div class="sidebar-text">
+		<aside id="left-block">
+			<img 
+			id="photo" 
+			src="img/photo.jpg" 
+			alt="Photograph">
+			<div id="sidebar-text">
 				<!-- Contacts  -->
-				<section class="contacts">
+				<section id="contacts">
 					<h3>Contacts</h3>
 					<p>☎</p>
 					<a href="tel:+380689369790">
