--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Page content -->
 	<div id="page">
 		<!-- Right block -->
-		<main id="right-block">
+		<main id="right-side">
 			<!-- About -->
 			<section id="about">
 				<p id="target">
@@ -163,7 +163,7 @@
 			</section>
 		</main>
 		<!-- Left block -->
-		<aside id="left-block">
+		<aside id="left-side">
 			<img 
 			id="photo" 
 			src="img/photo.jpg" 
