Minor syntax changes

--- a/index.html
+++ b/index.html
@@ -172,22 +172,28 @@
 				<!-- Contacts  -->
 				<section id="contacts">
 					<h3>Contacts</h3>
-					<p>☎</p>
-					<a href="tel:+380689369790">
-						+38 068 936 9790
-					</a>
-					<br>
-					<p>✉</p>
-					<a href="mailto:frontend.developer@i.ua">
-						frontend.developer@i.ua
-					</a>
-					<br>
-					<p>
-						<img id="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
-					</p>
-					<a href="https://github.com/dev0652">
-						github.com/dev0652
-					</a>
+					<ul id="contact-list">
+						<li>
+							<p>☎</p>
+							<a href="tel:+380689369790">
+								+38 068 936 9790
+							</a>
+						</li>
+						<li>
+							<p>✉</p>
+							<a href="mailto:frontend.developer@i.ua">
+								frontend.developer@i.ua
+							</a>
+						</li>
+						<li>
+							<p>
+								<img id="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
+							</p>
+							<a href="https://github.com/dev0652">
+								github.com/dev0652
+							</a>
+						</li>
+					</ul>
 				</section>
 				<!-- Tech Skills  -->
 				<section>
