Correct relative paths

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		<aside id="left-side">
 			<img 
 			id="photo" 
-			src="img/photo.jpg" 
+			src="./img/photo.jpg" 
 			alt="Photograph">
 			<div id="sidebar-text">
 				<!-- Contacts  -->
