--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ol id="projects-list">
 					<li>
 						<span>
-							<span class="leaders-box">
+							<span class="leaders-wrapper">
 								<span class="project-link">
 									<a href="
 									https://hellenglish.goit.global/
@@ -54,7 +54,7 @@
 					</li>
 					<li>
 						<span>
-							<span class="leaders-box">
+							<span class="leaders-wrapper">
 								<span class="project-link">
 									<a href="
 									https://cryptohub.goit.global/
@@ -70,7 +70,7 @@
 					</li>
 					<li>
 						<span>
-							<span class="leaders-box">
+							<span class="leaders-wrapper">
 								<span class="project-link">
 									<a href="
 									https://kidslike.goit.global/
