Replace ids with classes

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <body>
 	<!-- Page content -->
-	<div id="page">
+	<div class="page">
 		<!-- Right block -->
-		<main id="right-side">
+		<main class="right-side">
 			<!-- About -->
-			<section id="about">
-				<p id="target">
+			<section class="about">
+				<p class="target">
 					Front-end developer
 				</p>
 				<h1>
 					Mykhailo Diuzhenko
 				</h1>
-				<p id="description">
+				<p class="description">
 					I deliver well-structured and clean code that is easy to read and maintain. And as someone who had been
 					reporting bugs and UX issues long before learning to code, I know the importance of putting myself in the
 					user's shoes. I have no problem with meeting deadlines (as long as they're reasonable) and am always open to
@@ -33,9 +33,9 @@
 				</p>
 			</section>
 			<!-- Projects -->
-			<section id="projects">
+			<section class="projects">
 				<h3>Projects</h3>
-				<ol id="projects-list">
+				<ol class="projects-list">
 					<li>
 						<span>
 							<span class="leaders-wrapper">
@@ -87,7 +87,7 @@
 				</ol>
 			</section>
 			<!-- Work Experience -->
-			<section id="experience">
+			<section class="experience">
 				<h3>Work Experience</h3>
 				<!-- Experience Block 1 -->
 				<section>
@@ -144,7 +144,7 @@
 				</section>
 			</section>
 			<!-- Education -->
-			<section id="education">
+			<section class="education">
 				<h3>Education</h3>
 				<!-- Ed. Block 1 -->
 				<div>
@@ -163,31 +163,31 @@
 			</section>
 		</main>
 		<!-- Left block -->
-		<aside id="left-side">
+		<aside class="left-side">
 			<img 
-			id="photo" 
+			class="photo" 
 			src="./img/photo.jpg" 
 			alt="Photograph">
-			<div id="sidebar-text">
+			<div class="sidebar-text">
 				<!-- Contacts  -->
-				<section id="contacts">
+				<section class="contacts">
 					<h3>Contacts</h3>
-					<ul id="contact-list">
+					<ul class="contact-list">
 						<li>
-							<p>☎</p>
+							<p>&phone;</p>
 							<a href="tel:+380689369790">
 								+38 068 936 9790
 							</a>
 						</li>
 						<li>
-							<p>✉</p>
+							<p>&#9993;</p>
 							<a href="mailto:frontend.developer@i.ua">
 								frontend.developer@i.ua
 							</a>
 						</li>
 						<li>
 							<p>
-								<img id="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
+								<img class="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
 							</p>
 							<a href="https://github.com/dev0652">
 								github.com/dev0652
