--- a/index.html
+++ b/index.html
@@ -164,10 +164,7 @@
 		</main>
 		<!-- Left block -->
 		<aside class="left-side">
-			<img 
-			class="photo" 
-			src="./img/photo.jpg" 
-			alt="Photograph">
+			<img class="photo" src="./img/photo.jpg" alt="Photograph">
 			<div class="sidebar-text">
 				<!-- Contacts  -->
 				<section class="contacts">
