--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		</main>
 		<!-- Left block -->
 		<aside class="left-side">
-			<img class="photo" src="./img/photo.jpg" alt="Photograph">
+			<img class="photo" src="./img/photo.jpg" alt="Photograph.">
 			<div class="sidebar-text">
 				<!-- Contacts  -->
 				<section class="contacts">
@@ -184,7 +184,7 @@
 						</li>
 						<li>
 							<p>
-								<img class="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub">
+								<img class="github-logo" src="./img/GitHub-Mark-Light-32px.png" alt="GitHub.">
 							</p>
 							<a href="https://github.com/dev0652">
 								github.com/dev0652
